# nexodia

./: .gitignore  Cargo.toml  README.md  todo.md
.cargo/: config.toml
assets/: settings.json
assets/geometries/: settings.json
assets/male/: male.gltf  male_face.gltf  settings.json
assets/male/animations/: Catwalk Idle 01.fbx  Catwalk Idle To Walk Forward.fbx  Catwalk Walk Forward 01.fbx  Catwalk Walk Stop.fbx  idle.fbx  settings.json  walk_back.fbx  walk_forward.fbx  walk_left.fbx  walk_right.fbx
assets/male/base/: base.fbx  base.gltf
assets/mannequin/: mannequin.glb  settings.json
assets/mannequin/animations/: Walking.fbx
assets/mutant/: settings.json
assets/mutant/animations/: walking.fbx
assets/textures/: settings.json
compiler/: Cargo.toml  compile.sh  compile.ssh  compiler.py
compiler/blender/: compile.py  install_deps.py  vrm to fbx.py
compiler/src/: gl.rs  image.rs  lib.rs  main.rs  mesh.rs  settings.rs  writer.rs
compiler/src/assets/: image.rs  mesh.rs  mod.rs
engine/: Cargo.toml
engine/src/: _engine.rs  animator.rs  buffer.rs  camera.rs  frame.rs  instances.rs  lib.rs  light.rs  logger.rs  material.rs  object.rs  script.rs  shader.rs  time.rs
engine/src/assets/: animation.rs  decoder.rs  image.rs  mesh.rs  mod.rs  reader.rs  texture.rs  utils.rs  vertex.rs
engine/src/assets/vertex/: mod.rs  p.rs  pj.rs  pnj.rs  pu.rs  puj.rs
engine/src/engine/: adapter.rs  device.rs  mod.rs  surface.rs
engine/src/material/: default.rs  mod.rs
engine/src/shader/: mod.rs
engine/src/shader/basic_f_p/: mod.rs
engine/src/utils/: animations.rs  bgls.rs  color.rs  id.rs  initialization.rs  join_structs.rs  materials.rs  mod.rs  pressed_keys.rs  shader.rs  shaders.rs
macros/: Cargo.toml
macros/procs/: Cargo.toml
macros/procs/src/: assets.rs  bgls.rs  cbg.rs  lib.rs  shader.rs  utils.rs
macros/src/: lib.rs  material.rs  utils.rs
math/: Cargo.toml  todo.md
math/src/: lib.rs  mat3x3.rs  mat4x4.rs  mutf32.rs  quaternion.rs  stransform.rs  transform.rs  utils.rs  vec.rs
nexodia/: Cargo.toml
nexodia/src/: builder.rs  camera.rs  game.rs  main.rs  main_scene.rs  stats.rs  utils.rs
nexodia/src/assets/: mesh.rs  mod.rs  vertex.rs
nexodia/src/game/: builder.rs  mod.rs  window.rs
nexodia/src/initialization/: cmd_buffer.rs  debug.rs  depth_image.rs  device.rs  entry.rs  instance.rs  mod.rs  pdevice.rs  present_images.rs  surface.rs  swapchain.rs  window.rs
nexodia/src/object/: fixed.rs  mod.rs
nexodia/src/objects/: basic.rs  mod.rs  third_p_c.rs
nexodia/src/objects/character/: main.rs  mod.rs
nexodia/src/scenes/: main.rs
nexodia/src/scripts/: main_char.rs  mod.rs  third_p_c.rs
nexodia/src/shader/: mod.rs
nexodia/src/shader/basic_f_p/: mod.rs  shader.wgsl
nexodia/src/shaders/: mod.rs
nexodia/src/shaders/basic/: mod.rs  shader.wgsl
nexodia/src/shaders/basic/dir_light/: mod.rs  shader.wgsl
nexodia/src/shaders/basic/main/: mod.rs  shader.wgsl
nexodia/src/shaders/basic_f_p/: mod.rs  shader.wgsl
nexodia/src/shaders/character/: mod.rs  shader.wgsl
nexodia/src/shaders/character/dir_light/: mod.rs  shader.wgsl
nexodia/src/shaders/character/main/: mod.rs  shader.wgsl
nexodia/src/shaders/inst_anim_tex/: shader.wgsl
nexodia/src/shaders/instance_t_f_pu/: mod.rs  shader.wgsl
nexodia/src/shaders/texture_f_pu/: mod.rs  shader.wgsl
nexodia/src/utils/: lerp.rs  mod.rs
shader/: Cargo.toml
tests/: Cargo.toml
tests/src/: lib.rs  math.rs
utils/: Cargo.toml
utils/src/: colors.rs  lerp.rs  lib.rs  logger.rs
utils/src/camera/: _1st.rs  _3rd.rs  mod.rs
