[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
winit = "0.28.6"
wgpu = "0.17.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
zstd = "0.12.4"

[workspace]
members = [
    "engine",
    "compiler",
    "nexodia",
    "math",
    "tests"
]