[package]
name = "compiler"
description = "Assets compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
num_cpus.workspace = true
serde.workspace = true
serde_json.workspace = true
gltf.workspace = true
image.workspace = true
zstd.workspace = true
size.workspace = true
bytemuck.workspace = true
math.path = "../math"