[package]
name = "engine"
version = "0.1.0"
authors = ["muriel guedes pucci berehulka <murielguedes@pm.me>"]
edition = "2021"

[dependencies]
pollster = { version = "0.3.0", default-features = false }
log = "0.4.19"
backtrace = "0.3.68"
chrono = "0.4.26"
native-dialog = "0.6.4"
spin_sleep = "1.1.1"

winit = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
zstd = { workspace = true }

math = { path = "../math" }

[build-dependencies]
compiler = { path = "../compiler/" }