[package]
name = "engine"
description = "Game engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
pollster.workspace = true
log.workspace = true
backtrace.workspace = true
chrono.workspace = true
native-dialog.workspace = true
spin_sleep.workspace = true
winit.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
zstd.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
lazy_static.workspace = true
math.path = "../math"
compiler.path = "../compiler"

[build-dependencies]
compiler.path = "../compiler/"