[package]
name = "macros"
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
log.workspace = true
procs.path = "procs/"