[package]
name = "math"
description = "Math helper crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
paste.workspace = true
bytemuck.workspace = true