[package]
name = "nexodia"
version = "0.1.0"
authors = ["muriel guedes pucci berehulka <murielguedes@pm.me>"]
edition = "2021"

[dependencies]
winit = "0.28.6"
ash = { version = "0.37.3", default-features = false, features = ["linked","debug"]}
ash-window = "0.12.0"
raw-window-handle = "0.5.2"

utils = { path = "../utils" }