[package]
name = "nexodia"
description = "Game crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
winit.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
engine.path = "../engine"
utils.path = "../utils"