[package]
name = "tests"
description = "Tests crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[dependencies]
winit.workspace = true
cgmath.workspace = true
math.path = "../math"
engine.path = "../engine"